--- a/BookingSupport/BookingSupport.csproj
+++ b/BookingSupport/BookingSupport.csproj
@@ -5,11 +5,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FE65168E-375E-4D7B-A60A-0C5B5E52B46C}</ProjectGuid>
+    <ProjectGuid>{60AC6F7E-14FD-46F0-9B51-441391D08362}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OnlineBookingDataAccess</RootNamespace>
-    <AssemblyName>OnlineBookingDataAccess</AssemblyName>
+    <RootNamespace>BookingSupport</RootNamespace>
+    <AssemblyName>BookingSupport</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
@@ -38,7 +38,10 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Security" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,19 +50,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBUtility\CommandInfo.cs" />
+    <Compile Include="DBUtility\DESEncrypt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rooms.cs" />
-    <Compile Include="Shared.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\BookingSupport\BookingSupport.csproj">
-      <Project>{60ac6f7e-14fd-46f0-9b51-441391d08362}</Project>
-      <Name>BookingSupport</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\OnlineBookingModel\OnlineBookingModel.csproj">
-      <Project>{4c184854-728d-44af-8fca-fe0cafcc9b48}</Project>
-      <Name>OnlineBookingModel</Name>
-    </ProjectReference>
+    <Compile Include="DBUtility\PubConstant.cs" />
+    <Compile Include="DBUtility\SqlHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
